# ratestask

./: .pre-commit-config.yaml  README.md  config.py  pyproject.toml
app/: __init__.py
app/controllers/: rates.py
app/models/: rates.py
app/services/: rates_service.py
docs/: Rates Task.postman_collection.json  Rates Task.postman_environment.json
tests/: conftest.py
tests/controllers/: test_rates.py
tests/data/: rates.py
tests/services/: test_rates_service.py
