[tool.poetry]
name = "ratestask"
version = "0.1.0"
description = ""
authors = ["Nithin <nithin.george@edstem.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
marshmallow = "^3.19.0"
psycopg2 = "^2.9.5"
flask-sqlalchemy = "^3.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
pre-commit = "^2.21.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
